fix top drawer overflow issue

--- a/src/components/Mobile-nav-toolbar/MobileNavToolBar.css
+++ b/src/components/Mobile-nav-toolbar/MobileNavToolBar.css
@@ -12,7 +12,9 @@
 .download-toolbar {
     position: absolute;
     left: 0px;
+    display: none;
     bottom: 29px;
+    padding-bottom: 18px;
     width: 100%;
     height: 110px;
     background-color: rgb(239, 239, 239);
@@ -21,6 +23,10 @@
     border-top-right-radius: 1rem;
     overflow: hidden;
     z-index: -1;
+    transition: height 150ms ease-in-out 0s;
+}
+.download-toolbar.visible {
+  display: flex;
 }
 .download-toolbar div {
 display: flex;
