--- a/src/components/Mobile-nav/MobileNavbar.css
+++ b/src/components/Mobile-nav/MobileNavbar.css
@@ -18,7 +18,8 @@ nav {
     border-radius: 0.25rem;
 }
 .nintendo-logo {
-    width: 80px;
+    width: 90px;
+    padding-top: 6px;
 }
 .nav-banner {
     background-color: rgb(248,248,248);
@@ -27,5 +28,10 @@ nav {
 }
 .points-link {
     text-decoration: underline;
-    color: black;
+}
+
+@media (min-width: 425px) {
+    .nav-banner-text {
+        font-size: 1rem;
+    }
 }
