--- a/src/components/Top-drawer/TopDrawer.css
+++ b/src/components/Top-drawer/TopDrawer.css
@@ -8,13 +8,17 @@
   z-index: 100;
 }
 
-.top-drawer-wrapper.visible {
+.top-drawer-wrapper.isvisible {
   top: 0
 }
-
 .top-drawer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0.55rem 2rem;
+}
+@media (max-width: 1024px) {
+  .top-drawer-wrapper {
+    display: none;
+  }
 }
